Plugin cards: Allow word wrap to break words (prevents additional horizontal scroll on small screens)

--- a/src/runtime/components/plugin-card.scss
+++ b/src/runtime/components/plugin-card.scss
@@ -6,6 +6,8 @@
 	padding-right: 0;
 	cursor: pointer;
 
+	word-break: break-word;
+
 	label {
 		cursor: pointer;
 		display: inline;
